--- a/your-protected-page.html
+++ b/your-protected-page.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
 
-    <h1>როცა ნუკას დახმარება ჭირდება</h1>
+    <h1>როცა დახმარება ჭირდება</h1>
     <p></p>I'll be ready,
 Forever and always!
 I'm always here!</p>
